k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meuapp

spec:
  replicas: 2

  selector:
    matchLabels:
      app: meuapp

  template:
    metadata:
      labels:
        app: meuapp

    spec:
      containers:
      - name: meuapp
        image: nextfitacr.azurecr.io/meuapp:v1

        ports:
        - containerPort: 8080

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
