k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meuapp-service

spec:
  selector:
    app: meuapp

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
