k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: meuapp-vs
spec:
  hosts:
  - "*"
  gateways:
  - meuapp-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: meuapp-service
        port:
          number: 80
